; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_board.c_switch_get.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_board.c_switch_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWITCH_S1 = common dso_local global i32 0, align 4
@SWITCH_S2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @switch_get(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 1, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %9 [
    i32 1, label %5
    i32 2, label %7
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @SWITCH_S1, align 4
  store i32 %6, i32* %3, align 4
  br label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @SWITCH_S2, align 4
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %1, %7, %5
  %10 = load i32, i32* %3, align 4
  %11 = icmp eq i32 %10, 0
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
